feat(client): refactor auth architecture with nested routes and exclusive validation UI - [Router] 实现基于 AuthLayout 的嵌套路由，将窗口控制逻辑与业务表单彻底解耦 - [Component] 封装增强型 ValidatedInput 组件，支持正则校验、失焦触发与自定义插槽 - [UX] 引入 useTooltipManager 状态管理，实现全局单例 Tooltip 展示逻辑，防止气泡堆叠 - [UI] 实现“任务清单”式动态校验效果，支持子规则实时变色（红色 X / 绿色 Check） - [Electron] 优化无边框卡片交互，解决拖拽区域导致的 Hover 失效问题，并完善 no-drag 适配 - [Refactor] 升级注册与登录表单正则，涵盖用户名、密码强度、中英文昵称等多维度校验

--- a/components.json
+++ b/components.json
@@ -4,13 +4,14 @@
   "typescript": true,
   "tailwind": {
     "config": "",
-    "css": "src/style.css",
+    "css": "src/assets/css/style.css",
     "baseColor": "neutral",
     "cssVariables": true,
     "prefix": ""
   },
   "iconLibrary": "lucide",
   "aliases": {
+    "@": "./src",
     "components": "@/components",
     "utils": "@/lib/utils",
     "ui": "@/components/ui",
