--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
     }
   ],
   "compilerOptions": {
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
