--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.26",
     "vue-i18n": "^11.2.8",
-    "vue-router": "^4.6.4"
+    "vue-router": "^4.6.4",
+    "vue-sonner": "^2.0.9"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.3",
